--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "monsterfairy2-blog",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wooinjae2.github.io",
   "scripts": {
     "dev": "next dev -p 3005",
     "build": "next build",
