--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev -p 3005",
     "build": "next build",
     "export": "next export",
-    "deploy": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages",
+    "deploy": "rm -rf node_modules/.cache && rimraf out && next build && next export && touch out/.nojekyll && gh-pages -d out -t true",
     "start": "next start"
   },
   "dependencies": {
@@ -16,5 +16,10 @@
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "rimraf": "^3.0.0",
+    "gh-pages": "^2.1.1",
+    "babel-plugin-transform-define": "^1.3.2"
   }
 }
