--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "next build",
     "export": "next export",
     "deploy": "rm -rf node_modules/.cache && rimraf out && next build && next export && touch out/.nojekyll && gh-pages -d out -t true",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --ext js,jsx,ts,tsx --fix",
+    "type-check": "tsc --project tsconfig.json --pretty --noEmit"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -17,18 +19,25 @@
     "@types/react": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
-    "eslint": "^7.28.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "rimraf": "^3.0.0",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-define": "^1.3.2",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gh-pages": "^2.1.1",
-    "babel-plugin-transform-define": "^1.3.2"
+    "prettier": "^2.3.1",
+    "rimraf": "^3.0.0"
   }
 }
