--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
     "react/jsx-one-expression-per-line": 0,
     "no-nested-ternary": 0,
     "react/prop-types": 0,
-    "no-console": 0
+    "no-console": 0,
+    "no-underscore-dangle": ["error", { "allow": ["__NEXT_DATA__"] }]
   }
   
 }
