--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,8 @@
     "no-nested-ternary": 0,
     "react/prop-types": 0,
     "no-console": 0,
-    "no-underscore-dangle": ["error", { "allow": ["__NEXT_DATA__"] }]
+    "no-underscore-dangle": ["error", { "allow": ["__NEXT_DATA__"] }],
+    "import/no-unresolved" : 0
   }
   
 }
