--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,10 @@
     "react/prop-types": 0,
     "no-console": 0,
     "no-underscore-dangle": ["error", { "allow": ["__NEXT_DATA__"] }],
-    "import/no-unresolved" : 0
+    "import/no-unresolved" : 0,
+    "react/jsx-props-no-spreading": 0,
+    "react/destructuring-assignment": 0,
+    "jsx-a11y/click-events-have-key-events": 1
   }
   
 }
