--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "next": "10.2.0",
+    "prismjs": "^1.23.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-simple-code-editor": "^0.11.0",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.16.5",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-define": "^1.3.2",
     "eslint": "^7.28.0",
