--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@material-ui/icons": "^4.11.2",
     "@types/node": "^15.12.1",
     "@types/react": "^17.0.9",
+    "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "next": "10.2.0",
+    "next-redux-wrapper": "^7.0.2",
     "prismjs": "^1.23.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
     "react-simple-code-editor": "^0.11.0",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
@@ -41,6 +46,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "gh-pages": "^2.1.1",
     "prettier": "^2.3.1",
+    "redux-devtools-extension": "^2.13.9",
     "rimraf": "^3.0.0"
   }
 }
