jest Counter 테스트 추가

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "file-loader": "^6.2.0",
     "next": "10.2.0",
+    "next-images": "^1.8.1",
     "next-redux-wrapper": "^7.0.2",
     "prismjs": "^1.23.0",
     "react": "17.0.2",
